--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests
-beautifulsoup4
-python-dotenv
-Flask
-
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+python-dotenv>=1.0.0
+Flask>=2.3.0
+lxml>=4.9.0
